# kelp-os

./: .gitignore
.github/workflows/: clawd-linux-ci.yml
buildroot/board/kelp/rootfs_overlay/etc/: inittab
buildroot/board/kelp/rootfs_overlay/etc/init.d/: S98desktop
buildroot/configs/: kelp_x86_64_defconfig
buildroot/package/kelp-system/: kelp-system.mk
channels/discord/: CMakeLists.txt
channels/discord/src/: main.c
channels/signal/: CMakeLists.txt
channels/signal/src/: main.c
channels/slack/: CMakeLists.txt
channels/slack/src/: main.c
channels/telegram/: CMakeLists.txt
channels/telegram/src/: main.c
debian-openclaw/: conffiles  control  openclaw.json.example  openclawgw.service  postinst  prerm
lib/agents/src/: sandbox.c
lib/agents/src/providers/: anthropic.c
lib/memory/src/: memory.c
scripts/: run-qemu.sh
src-c/: Makefile
src-c/cli/: cmd_agent.c  cmd_config.c  cmd_version.c  main.c
src-c/gateway/: auth_gateway.c  channel_webchat.c  epoll_server.c  handler_chat.c  handler_health.c  handler_webhook.c  http_parser.c  http_response.c  main.c  router.c  session_store.c  systemd.c  tls.c  ws_server.c
src-c/include/: auth.h  channel.h  cli.h  config.h  epoll_server.h  gateway.h  http.h  json.h  openclaw.h  session_store.h  stream.h
src-c/kernel/: Makefile  openclaw.h  openclaw_chardev.c  openclaw_mod.c  openclaw_netfilter.c  openclaw_procfs.c
system/: CMakeLists.txt
system/lib/agents/src/: tool.c
